V1.1.1
---------
 * Simplified the code for setting the editor font.
 * Enable/disable the Paste actions appropriately.

V1.1.0
---------
 * Fixed crash on pasting with empty clipboard.
 * Fixed a bug in updating widget states after deleting a node.
 * Fixed text zooming for documents that are saved by the Qt6 version.
 * Corrected the tab stop distance.
 * Added a workaround for a Qt bug related to the current character format.
 * Added a real Unix signal handler.
 * Removed "Embed Image" from the toolbar to make it uncluttered.
 * Better window placement on tray activation without X11.
 * Simplified finding of Qt modules with cmake.
 * Added a workaround for a Qt6 bug that doesn't include newlines in the plain-text data of the copied text.
 * Prevented total node deselection with Qt6.
 * Silenced the compilation warnings with Qt 6.4.
 * Corrected the context menus and tooltips on Wayland, by specifying their parent widgets.
 * Better sizes for some dialogs.

V1.0.0
---------
 * Now FeatherNotes is a single-instance app, that doesn't open the same document twice when launched. Qt D-Bus is used for this purpose.
 * Removed the qmake compilation (have no time to maintain it, especially with Qt D-Bus).
 * Added a warning-bar for some messages.
 * Do printing in a separate thread, so that, if it takes a long time, the app could still be used.
 * Select the text between spaces with Ctrl + double click.
 * Added an option for remembering the expanded state of each node.
 * Require Qt5.15.
 * Enabled compilation against Qt6. With cmake, "ENABLE_QT5" should be set to "OFF" (as in `cmake .. -DENABLE_QT5=OFF`) — it's "ON" by default.
 * Fixed the problems in restoring of window size and position.
 * Keep the search string on node switching if the search is done in all nodes.
 * Added an option for saving on exiting without prompt.
 * When inserting a link, choose a blue color based on the background color.
 * Scroll to the clicked node without delay.